# predictable

./: .gitignore  LICENSE  Pipfile  README.md  app.py  default.nix  docker.nix  poetry.nix  pyproject.toml  shell.nix
dokku/: CHECKS
predictable/templates/: edit.html  feed.xml
templates/: edit.html  feed.xml
